examples/test/testpolicy3703.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3703
  namespace: namespace282
spec:
  podSelector:
    matchLabels:
      key41: value37
      key48: value17
      key45: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value23
      podSelector:
        matchLabels:
          key30: value45
          key8: value30
          key0: value29
